<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="show_local">Show Local</string>
    <string name="add_location_to_task">Add Location to Task</string>
    <string name="remove">Remove Completed</string>
    <string name="no_tasks">No Tasks</string>
    
    <string name="app_name">GeoTask Manager</string>
<string name="location_string">Located:</string>
    <string name="add_tasks">Add </string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
<string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to add this task?</string>
    <string name="discard">Discard</string>
<string name="cancel_button">Cancel</string>
<string name="use_this_location">Use this Location</string>
    <string name="map_this_address">Map this Address</string>
    <string name="ok">Ok</string>
    <string name="ok_ill_never_doit_again">Ok, i never do it again</string>
    <string name="the_task_must_have_description_message">The task must have description, Please add something!</string>
    <string name="the_task_must_have_description_title">The task is needed</string>
    <string name="the_address_must_have_something_title">The Address is needed </string>
    <string name="the_address_must_have_something_message">The task must have an address. Please add something!</string>
    <string name="tasks_title_hint">Example: Visit Mexico City</string>
    <string name="tasks_address_hint">Example: Mexico City</string>
    

</resources>
