<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView 
		android:id="@+id/location_title"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
 		android:text="@string/add_location_to_task"
 		
	    />
	<EditText
 		android:id="@+id/task_address"
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/location_title"
 		android:lines="3"/>
	<Button
		android:id="@+id/map_location_button"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:layout_below="@id/task_address"
 		android:text="@string/map_this_address"/>
	<com.google.android.maps.MapView
		android:id="@+id/map"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:layout_below="@id/map_location_button"
		android:layout_above="@+id/use_this_location_button"
 		android:clickable="true" 		
 		android:apiKey="0HaBk-SFoj5mylVmA5E9xfmP6jpha9IbyBVWDXA" /> <!--0HaBk-SFoj5mG0RDgbRUku_ngMx72UZ2s5p6-tA--> 
 		<!--debug certificate 0HaBk-SFoj5mylVmA5E9xfmP6jpha9IbyBVWDXA--> 
	<Button
		android:id="@id/use_this_location_button"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
 		android:text="@string/use_this_location"/>
</RelativeLayout>
