<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:myapp="http://schemas.android.com/apk/res/org.androidtitlan.geotaskmanager"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <com.admob.android.ads.AdView 
		android:id="@+id/admob"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		myapp:backgroundColor="#000000" 
		myapp:primaryTextColor="#FFFFFF" 
		myapp:secondaryTextColor="#CCCCCC"
    	android:layout_alignParentBottom="true"
    	
	/> 
	<TextView  
		android:id="@+id/tasks_title"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/tasks"
    />
    <TextView
    	android:id="@+id/location_text"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
    	/>
    <ListView 
    	android:id="@id/android:list"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_above="@+id/add_button"
	    android:layout_below="@+id/tasks_title"
    />
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@id/android:empty"
    	android:text="@string/no_tasks"
    	android:gravity="center_vertical|center_horizontal"
    	android:layout_below="@id/tasks_title"
    	android:layout_above="@id/add_button"
    />
    <Button  
    	android:id="@+id/add_button"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/add_tasks"
	    android:layout_alignTop="@+id/remove_button"
	    
    />
    <Button
    	android:id="@+id/remove_button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/add_button"
    	android:text="@string/remove"
    	android:layout_above="@+id/admob"
    	
    	/>
    <ToggleButton
    	android:id="@+id/show_local_tasks_toggle"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_above="@+id/admob"
    	android:layout_toRightOf="@id/remove_button"
    	android:textOn="On"
    	android:textOff="Off"
    	/>
    	
    />
    <TextView
    	android:id="@+id/show_local_tasks_text"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:padding="2dip"
    	android:lines="2"
    	android:text="Show Local"
    	android:gravity="top"
    	android:layout_toRightOf="@id/show_local_tasks_toggle"
    	android:layout_alignTop="@id/show_local_tasks_toggle"
    	android:layout_alignParentBottom="true"
    	/>
    
</RelativeLayout>


